remove() em MaxHeap